[package]
name = "model-loading"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytemuck = { version = "1.20.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
glutin = "0.32.1"
glutin-winit = "0.5.0"
winit = "0.30.5"

[build-dependencies]
gl_generator = "0.14.0"

[features]
debug_gl_structs = []
